# BIG_DATA

BD_HW_Hadoop/: app.py  run.sh
BD_HW_Kafka/: Dockerfile  app.py  docker-compose.yml  preprocessing.ipynb  pyproject.toml  requirements.txt
BD_HW_Kafka/backend/: config_file.py  data.py  producers_consumers.py
BD_HW_Kafka/frontend/: upload.py
Lab3/: Dockerfile  ReadME.md  app.py  docker-compose.yaml  etl.py  ml.py  run.sh  spark.py
Lab3/scr/: app.py
Lab3/src/: etl.py  ml.py  run.sh  spark.py
